# aletheia-practical-core

./: .gitignore  CHANGELOG.md  FREEZE.json  FREEZE.md  LICENSE  LICENSE_TEMPLATE.txt  OVERLAY_README.txt  Provenance_Manifest.json  Provenance_Manifest_TEMPLATE.json  README.md  RESTORE_AND_RUN.txt  SHA256SUMS.txt  StructuredAnswer_TEMPLATE.json  TESTPACK_NOTE.txt  _cal_env.json  _cal_sq.json  _drift_calibration_report.json  _drift_redteam_report.json  _drift_replay_report.json  _rt_env.json  _rt_sa.json  _rt_sq.json  ag.py  aletheia.py  aletheia_demo.py  aletheia_selfcheck.py  aletheia_verify.py  calibration_report.json  diag_answer.json  diag_case.json  diag_env.json  drift_report.json  env.json  env_TAMPER.json  pyproject.toml  replay_env.json  replay_tamper.json  sa.json  tool_approval.json  tool_plan.json  (+2 more)
aletheia/: integrations.py
constraints/: compiled_constraints.json  rules_v1.json
docs/: ADAPTER_SPEC.md  ADAPTER_TRUST_MODEL.md  ARCHITECTURE.md  CLAIMCHECK.md  CLAIMS.md  CLI.md  DEMO.md  DETECTIVE_CLAIMS.md  DETECTIVE_SPEC.md  DETERMINISM_RULES.md  HARDNESS.md  INGEST_SPEC.md  LOSS_TAXONOMY.md  PROFILE_SPEC.md  README.md  REJECTION_TAXONOMY.md  RELEASE.md  RETENTION_POLICY.md  RUNBOOK.md  SECURITY.md  SIREN_SPEC.md  SPINE_SPEC.md  THREAT_MODEL.md  VERITAS.md
profiles/: ai_audit_generic_v1.json  file_lines_v1.json  json_generic_v1.json  ot_sensor_generic_v1.json
provenance_companion/: README.txt
schemas/: adapter_identity.schema.json  adapter_profile.schema.json  adapter_result.schema.json  canonical_adapter_event.schema.json  case_manifest_v1.json  (+10 more)
(+128 files in other folders)
